// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link/> should not render all agent available data 1`] = `
<li
  class="linkRow"
>
  <a
    class="link"
    href="httpbin.org/get?first_name=Acme&private="
    rel="noopener noreferrer"
    target="_blank"
  >
    Query 
    <i
      class="linkIcon material-icons"
    >
      open_in_new
    </i>
  </a>
</li>
`;

exports[`<Link/> should render with template replaced with its according value 1`] = `
<li
  class="linkRow"
>
  <a
    class="link"
    href="httpbin.org/get?first_name=Doe&last_name=John&partner=Johanna&agent=Acme Support"
    rel="noopener noreferrer"
    target="_blank"
  >
    Query 1234
    <i
      class="linkIcon material-icons"
    >
      open_in_new
    </i>
  </a>
</li>
`;

exports[`<Link/> should render with the editor 1`] = `
<li
  class="linkRow"
>
  <a
    class="link"
    href="httpbin.org/get?first_name=Doe&last_name=John&partner=&agent="
    rel="noopener noreferrer"
    target="_blank"
  >
    Query 
    <i
      class="linkIcon material-icons"
    >
      open_in_new
    </i>
  </a>
  <span
    class="editIcons"
  >
    <i
      class="material-icons"
      id="somepath-2"
    >
      edit
    </i>
    <i
      class="material-icons text-danger"
    >
      delete
    </i>
  </span>
</li>
`;
